AI에게 제공하는 맥락 전달 방식 변경
기존: 단순 텍스트로 구분
변경: ai role 기능을 활용하여 맥락 전달